# tranquility

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/e01-basic/: Cargo.toml
examples/e01-basic/src/: main.rs
src/: auth.rs  client.rs  error.rs  lib.rs  main.rs  model.rs  prelude.rs
src/auth/: basic.rs  mod.rs
src/client/: mod.rs  route.rs
src/model/: award.rs  comment.rs  comment_sort.rs  fullname.rs  link.rs  link_sorts.rs  listing.rs  me.rs  message.rs  misc.rs  mod.rs  more.rs  prelude.rs  quarantine_permissions.rs  size.rs  submission_type.rs  subreddit.rs  subreddit_type.rs  thing.rs  user.rs  usersubreddit.rs
tests/: test-deserialization.rs
tests/json/: article-comments.json  awards.json  comment.json  info-comment.json  info-link.json  link.json  morechildren.json  subreddit-about.json  subreddit.json  user-about.json  user.json
