[package]
name = "tranquility"
description = "A Rust library for the Reddit API."
documentation = "https://docs.rs/tranquility"
homepage = "https://github.com/Elinvynia/tranquility"
repository = "https://github.com/Elinvynia/tranquility.git"
keywords = ["reddit", "api"]
authors = ["Elinvynia <59487684+Elinvynia@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
version = "0.0.3"
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
async-trait = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "0.2", features = ["rt-core", "macros"] }
