[package]
name = "tranquility"
description = "A Rust library for the Reddit API."
documentation = "https://docs.rs/tranquility"
homepage = "https://github.com/Elinvynia/tranquility"
repository = "https://github.com/Elinvynia/tranquility.git"
keywords = ["reddit", "api", "async"]
authors = ["Elinvynia <59487684+Elinvynia@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
version = "0.0.4"
edition = "2018"

[dependencies]
futures-timer = "3.0"
http = "0.2"
reqwest = "0.10"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
