[package]
name = "e01-basic"
version = "0.1.0"
authors = ["Elinvynia <59487684+Elinvynia@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
tranquility = { path = "../../" }
dotenv = "0.15"
